tests/e2e/manifest/test-template/target-deployment.yaml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: target-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: target-deployment
spec:
  type: ClusterIP
  selector:
    app: target-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-deployment
  template:
    metadata:
      labels:
        app: target-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        sidecar.istio.io/statsInclusionPrefixes: "cluster,listener,server,http,tcp"
    spec:
      serviceAccountName: target-deployment
      containers:
        - name: target-deployment
          image: kennethreitz/httpbin:latest
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: target-deployment-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /${NAMESPACE}/httpbin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: target-deployment
                port:
                  number: 80
